--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,11 +1,11 @@
-<title>Administrar Ampa books</title>
+<title>Administrar Ampa Books</title>
 
 <body>
     <a href="/" class="def">inicio</a>
-    <a href="/users" class="def">usuarios</a> 
-    <a href="/products" class="def">libros</a>
-    <a href="/invoices" class="def">compras</a>
     <a href="/students" class="def">alumnos</a>
+    <a href="/products" class="def">libros</a>    
+    <a href="/tickets" class="def">tickets</a>
+    <a href="/users" class="def">usuarios</a>
     <a href="/backup" class="def">backup</a>
     <b><i>Admin</i></b> (<a href="/logout" class="def">logout</a>)
 </body>
