--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,5 +7,5 @@
     <a href="/tickets" class="def">tickets</a>
     <a href="/users" class="def">usuarios</a>
     <a href="/backup" class="def">backup</a>
-    <b><i>Admin</i></b> (<a href="/logout" class="def">logout</a>)
+    <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 </body>
