--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,7 @@ $if allow is False:
 <form name="main" method="post" id="main"> 
 $if not form.valid: <p class="error">* Revisa los campos obligatorios!</p>
 $:form.render()
-<input type="submit" />    </form>
+<input type="submit" />
+</form>
 
 </body>
