--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,8 +2,10 @@
 
 <body>
     <a href="/" class="def">inicio</a>
+    <a href="/grades" class="def">cursos</a>
+    <a href="/groups" class="def">grupos</a>
     <a href="/students" class="def">alumnos</a>
-    <a href="/products" class="def">libros</a>    
+    <a href="/books" class="def">libros</a>
     <a href="/tickets" class="def">tickets</a>
     <a href="/users" class="def">usuarios</a>
     <a href="/backup" class="def">backup</a>
