--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,6 @@
 $def with (users)
 <a href="/" class = "def">inicio</a>
-<a href="/adduser" class = "def">nuevo_usuario</a>
+<a href="/useradd" class = "def">nuevo_usuario</a>
 <b><i>Admin!</i></b>(<a href="/logout" class = "def">logout</a>)
 <h2>Usuarios registrados</h2>
 El usuario <b>NIF</b> se usa para definir el NIF del ticket.<br>
