--- a/templates/useradd.html
+++ b/templates/useradd.html
@@ -1,9 +1,12 @@
 $def with (form)
-<a href="/" class = "def">inicio</a> <a href="/users" class = "def">usuarios</a>
-<b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
+<title>Nuevo usuario</title>
+<body onload="javascript:document.main.username.focus()">
+<a href="/" class="def">inicio</a> <a href="/users" class="def">usuarios</a>
+<b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 <h2>Nuevo usuario:</h2>
-<form name="user" method="post"> 
+<form name="main" method="post" id="main"> 
 $if not form.valid: <p class="error">* Revisa los campos obligatorios!</p>
 $:form.render()
 <input type="submit" />
 </form>
+</body>
