using id=1 to manage default admin user, grade and group

--- a/templates/grades.html
+++ b/templates/grades.html
@@ -13,7 +13,10 @@ $def with (grades)
 </tr>
 $for grade in grades:
 	<tr id="t$grade.id">
-        <td><input type="Checkbox" name="$grade.id"></input></td>
+        <td>
+        	$if grade.id != 1:
+        		<input type="Checkbox" name="$grade.id"></input>
+        </td>
 		<td>$grade.grade</td>
 	</tr>
 </table>
