--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 $def with (content)
 <html>
 <head>
-	<link rel="stylesheet" href="libros.css">
+	<link rel="stylesheet" href="/libros.css">
 </head>
 <body>
 $:content
