export students as csv file

--- a/templates/students.html
+++ b/templates/students.html
@@ -3,6 +3,7 @@ $def with (studs, studsearchkeys)
 <a href="/" class="def">inicio</a>
 <a href="/studadd" class="def">nuevo_alumno</a>
 <a href="/studimport" class="def">importar_alumnos</a>
+<a href="/studexport" class="def">exportar_alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 
 <p><i><b>Buscar</b> y <b>editar</b> alumnos:</i></p>
