--- a/templates/grades.html
+++ b/templates/grades.html
@@ -1,4 +1,5 @@
 $def with (grades)
+<title>Cursos</title>
 <a href="/" class = "def">inicio</a>
 <a href="/gradeadd" class = "def">nuevo_curso</a>
 <b><i>Admin!</i></b>(<a href="/logout" class = "def">logout</a>)
