--- a/templates/bookadd.html
+++ b/templates/bookadd.html
@@ -1,9 +1,9 @@
 $def with (form)
-<title>Nuevo alumno</title>
-<a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
+<title>Nuevo libro</title>
+<a href="/" class = "def">inicio</a> <a href="/books" class = "def">libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
-<h2>Nuevo alumno:</h2>
-<form name="student" method="post"> 
+<h2>Nuevo libro:</h2>
+<form name="book" method="post"> 
 $if not form.valid: <p class="error">* Revisa los campos obligatorios!</p>
 $:form.render()
 <input type="submit" />    </form>
