--- a/templates/groups.html
+++ b/templates/groups.html
@@ -1,4 +1,5 @@
 $def with (groups)
+<title>Grupos</title>
 <a href="/" class="def">inicio</a>
 <a href="/groupadd" class="def">nuevo_grupo</a>
 <b><i>Admin!</i></b>(<a href="/logout" class="def">logout</a>)
