--- a/templates/students.html
+++ b/templates/students.html
@@ -1,5 +1,5 @@
 $def with (studs, studsearchkeys)
-
+<title>Alumnos</title>
 <a href="/" class="def">inicio</a>
 <a href="/studadd" class="def">nuevo_alumno</a>
 <a href="/studimport" class="def">importar_alumnos</a>
