--- a/templates/users.html
+++ b/templates/users.html
@@ -1,4 +1,5 @@
 $def with (users)
+<title>Usuarios</title>
 <a href="/" class="def">inicio</a>
 <a href="/useradd" class="def">nuevo_usuario</a>
 <b><i>Admin!</i></b>(<a href="/logout" class="def">logout</a>)
