--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,7 +11,13 @@
 <a href="/backup" class="def">backup</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 
-<h3>Notas de ayuda</h3>
+<h2>Notas de ayuda</h2>
+
+<h3>Cursos y grupos</h3>
+
+<p>La aplicación necesita que la lista de <a href="/grades" class="def">cursos</a> y <a href="/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de las listas de <a href="/students" class="def">alumnos</a> y <a href="/books" class="def">libros</a>. Esto significa que hay que <strong>dar de alta</strong> todos los cursos y grupos que aparezcan en las tablas de alumnos y libros.</p>
+
+<h3>Importar y exportar datos</h3>
 
 <p>Para importar/exportar datos debes tener en cuenta los siguientes puntos:</p>
 
