<bodies> and focus()

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,6 +1,5 @@
 <title>Administración</title>
-
-
+<body>
 <a href="/" class="def">inicio</a>
 <a href="/grades" class="def">cursos</a>
 <a href="/groups" class="def">grupos</a>
@@ -26,3 +25,4 @@
 <li>La codificación de caracteres es <strong>UTF-8</strong> y lo deberás tener en cuenta tanto al importar los datos en tu hoja de cálculo (Excel, LibreOffice, etc.) como al guardarlo como <code>.csv</code>.</li>
 </ul>
 <p>Por ejemplo, cuando LibreOffice abre el archivo <code>.csv</code>, se abre un cuadro de diálogo en el que pregunta cuál es la codificación de caracteres que se debe utilizar y cuál es el delimitador de texto. Entonces hay que seleccionar <code>Unicode (UTF-8)</code> como codificación y la <code>coma</code> como delimitador.</p>
+</body>
