--- a/templates/backup.html
+++ b/templates/backup.html
@@ -1,3 +1,5 @@
+<title>Backup</title>
+<body>
 <a href="/" class = "def">inicio</a>
 
 <b><i>Addmin</i></b> (<a href="/logout" class = "def">logout</a>)
@@ -12,4 +14,4 @@
 <br/>
 <input type="submit" />
 </form>
-
+</body>
