--- a/templates/bookedit.html
+++ b/templates/bookedit.html
@@ -1,5 +1,6 @@
 $def with (book, grades, groups)
 <title>Editar libro</title>
+<body>
 <a href="/" class = "def">inicio</a> <a href="/books" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -60,3 +61,4 @@ $for s in book
     <hr />
     <input type="submit" />
     </form>
+</body>
