--- a/templates/books.html
+++ b/templates/books.html
@@ -1,5 +1,6 @@
 $def with (books, booksearchkeys)
 <title>Buscar libros</title>
+<body>
 <a href="/" class="def">inicio</a>
 <a href="/bookadd" class="def">nuevo_libro</a>
 <a href="/bookimport" class="def">importar_libros</a>
@@ -35,3 +36,4 @@ $for book in books:
 </table>
 <input type="submit" />
 </form>
+</body>
