--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,6 @@
 $def with (student, books, user)
 <title>3. Carrito</title>
+<body>
 <a href="/" class = "def">inicio</a>
 <b><i>$user</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -38,3 +39,4 @@ $for book in books:
 </table>
 <input type="submit" />
 </form>
+</body>
