--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,8 @@
 $def with (f, error)
 <title>$f error :(</title>
+<body>
 <a href="/" class = "def">inicio</a>
 <h2>Oh no! ha ocurrido un error :(</h2>
 <h3>$f error:</h3>
 <p>$error</p>
+</body>
