--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 $def with (form, date, allow)
-<title>Ampa Books Login</title>
+<title>Ampa Books</title>
 <body onload="javascript:document.main.usuario.focus()">
 <a href="/" class = "def">inicio</a> $date <a href="/COPYING" class="def">&copy; vicnala 2014</a>
 <h3>Distribución de libros de texto</h3>
