--- a/templates/preview.html
+++ b/templates/preview.html
@@ -1,6 +1,6 @@
 $def with (student, items, total, user, date)
-
 <title>4. Revisar lista</title>
+<body>
 <a href="/" class = "def">inicio</a>
 <b><i>$user</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -61,3 +61,4 @@ $for item in items:
 
 <a href="/print" target="_blank" class = "def">Imprimir y archivar</a>
 
+</body>
