--- a/templates/students.html
+++ b/templates/students.html
@@ -1,5 +1,6 @@
 $def with (studs, studsearchkeys)
 <title>Alumnos</title>
+<body>
 <a href="/" class="def">inicio</a>
 <a href="/studadd" class="def">nuevo_alumno</a>
 <a href="/studimport" class="def">importar_alumnos</a>
@@ -43,3 +44,4 @@ $for student in studs:
 </table>
 <input type="submit" />
 </form>
+</body>
