--- a/templates/users.html
+++ b/templates/users.html
@@ -1,5 +1,6 @@
 $def with (users)
 <title>Usuarios</title>
+<body>
 <a href="/" class="def">inicio</a>
 <a href="/useradd" class="def">nuevo_usuario</a>
 <b><i>Admin!</i></b>(<a href="/logout" class="def">logout</a>)
@@ -28,4 +29,4 @@ $for user in users:
 
 <input type="submit" />
 </form>
-
+</body>
