--- a/templates/bookadd.html
+++ b/templates/bookadd.html
@@ -1,4 +1,5 @@
 $def with (form)
+<body onload="javascript:document.book.titulo.focus()">
 <title>Nuevo libro</title>
 <a href="/" class = "def">inicio</a> <a href="/books" class = "def">libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
@@ -7,3 +8,4 @@ $def with (form)
 $if not form.valid: <p class="error">* Revisa los campos obligatorios!</p>
 $:form.render()
 <input type="submit" />    </form>
+</body>
