--- a/templates/grades.html
+++ b/templates/grades.html
@@ -1,5 +1,6 @@
 $def with (grades)
 <title>Cursos</title>
+<body>
 <a href="/" class = "def">inicio</a>
 <a href="/gradeadd" class = "def">nuevo_curso</a>
 <b><i>Admin!</i></b>(<a href="/logout" class = "def">logout</a>)
@@ -24,4 +25,4 @@ $for grade in grades:
 
 <input type="submit" />
 </form>
-
+</body>
