--- a/templates/groups.html
+++ b/templates/groups.html
@@ -1,5 +1,6 @@
 $def with (groups)
 <title>Grupos</title>
+<body>
 <a href="/" class="def">inicio</a>
 <a href="/groupadd" class="def">nuevo_grupo</a>
 <b><i>Admin!</i></b>(<a href="/logout" class="def">logout</a>)
@@ -24,4 +25,4 @@ $for group in groups:
 
 <input type="submit" />
 </form>
-
+</body>
