--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,7 @@
 $def with (students, user)
 
 <title>2. Alumnos encontrados</title>
+<body>
 <a href="/" class = "def">inicio</a>
 <b><i>$user</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -39,4 +40,4 @@ $for student in students:
 
 <input type="submit" />
 </form>
-
+</body>
