--- a/templates/studadd.html
+++ b/templates/studadd.html
@@ -1,5 +1,6 @@
 $def with (form)
 <title>Nuevo alumno</title>
+<body onload="javascript:document.student.nombre.focus()">
 <a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 <h2>Nuevo alumno:</h2>
@@ -7,3 +8,4 @@ $def with (form)
 $if not form.valid: <p class="error">* Revisa los campos obligatorios!</p>
 $:form.render()
 <input type="submit" />    </form>
+</body>
