--- a/templates/studedit.html
+++ b/templates/studedit.html
@@ -1,5 +1,6 @@
 $def with (stud, grades, groups)
 <title>Editar alumno</title>
+<body>
 <a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -71,3 +72,4 @@ $for s in stud
     <hr />
     <input type="submit" />
     </form>
+</body>
