--- a/templates/studimport.html
+++ b/templates/studimport.html
@@ -1,4 +1,5 @@
 <title>Importar alumnos</title>
+<body>
 <a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
@@ -9,3 +10,4 @@
 <br/>
 <input type="submit" />
 </form>
+</body>
