useredit with special users ORG and NIF management

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,6 +16,10 @@
 
 <p>La aplicación necesita que la lista de <a href="/grades" class="def">cursos</a> y <a href="/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de las listas de <a href="/students" class="def">alumnos</a> y <a href="/books" class="def">libros</a>. Esto significa que hay que <strong>dar de alta</strong> todos los cursos y grupos que aparezcan en las tablas de alumnos y libros.</p>
 
+<h3>Nombre de la organización y NIF para la nota de entrega</h3>
+
+En la lista de usuarios aparecen 2 con <code>usenames</code> <strong>ORG</strong> y <strong>NIF</strong>. Estos sirvven para definir el nombre de la organización y el NIF que aparecen en la nota de entrega. Si no quieres que aparezcan asígnales sus valores por defecto ORG=None y NIF=0.
+
 <h3>Importar y exportar datos</h3>
 
 <p>Para importar/exportar datos debes tener en cuenta los siguientes puntos:</p>
