--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 $def with (form, date, allow)
 <title>Ampa Books</title>
 <body onload="javascript:document.main.usuario.focus()">
-<a href="/" class = "def">inicio</a> $date <a href="/COPYING" class="def">&copy; vicnala 2014</a>
+<a href="/" class = "def">inicio</a> $date <a href="/LICENSE" class="def">&copy; vicnala 2014</a>
 <h3>Distribución de libros de texto</h3>
 <p><i>Accede con tu <b>nombre de usuario</b>:</i></p>
 $if allow is False:
