--- a/templates/printandarchive.html
+++ b/templates/printandarchive.html
@@ -1,4 +1,4 @@
-$def with (invoice, items, mode, org, nif, enabled)
+$def with (ticket, items, org, nif, enabled)
 
 <title>Nota de entrega</title>
 
@@ -6,16 +6,16 @@ $if enabled is True:
     <body onload="javascript:window.print()">
 $else:
     <body>
-<p>Te ha atendido <b><i>$invoice.dependiente</i></b> el $invoice.date</p>
+<p>Te ha atendido <b><i>$ticket.dependiente</i></b> el $ticket.date</p>
 <hr />
 
-$if mode:
+$if ticket.total < 0:
     <h2>Nota de entrega <em>(devolución)</em></h2>
 $else:
     <h2>Nota de entrega <em>(compra)</em></h2>
 
 <p>
-<b>Número de nota:</b> $invoice.id<br>
+<b>Número de nota:</b> $ticket.id<br>
 $if org.name != 'None':
     <b>Organización:</b> $org.name<br>
 
@@ -30,10 +30,10 @@ $if nif.name != '0':
 <table border="0" cellpadding="2">
     <tr>
         <td><b>Nombre</b></td>
-        <td>$invoice.alumno</td>
+        <td>$ticket.alumno</td>
     </tr>
         <td><b>Curso</b></td>        
-        <td>$invoice.curso</td>
+        <td>$ticket.curso</td>
     </tr>
 </table>
 
@@ -57,7 +57,7 @@ $for item in items:
         <td>$i.grupo</td>
         <td>$i.titulo</td>
         <td>$i.editorial</td>
-        $if mode:
+        $if ticket.total < 0:
             <td>-$i.precio EUR</td>
         $else:
             <td>$i.precio EUR</td>
@@ -67,7 +67,7 @@ $for item in items:
     <td><b></b></td>
     <td><b></b></td>
     <td><b>Total</b></td>
-    <td><b>$invoice.total EUR</b></td>
+    <td><b>$ticket.total EUR</b></td>
 </tr>
 </table>
 </body>
