download a blank database

--- a/templates/backup.html
+++ b/templates/backup.html
@@ -14,4 +14,8 @@
 <br/>
 <input type="submit" />
 </form>
+<hr />
+<h2> Descargar la base de datos vacía</h2>
+<a href="/libros-vacia.sqlite" class = "def">descargar base de datos vacía</a>
+<hr />
 </body>
