refactored admin urls

--- a/templates/bookedit.html
+++ b/templates/bookedit.html
@@ -1,7 +1,7 @@
 $def with (book, grades, groups)
 <title>Editar libro</title>
 <body>
-<a href="/" class = "def">inicio</a> <a href="/books" class = "def">alumnos</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/books" class = "def">libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2>Editar libro:</h2>
