--- a/templates/books.html
+++ b/templates/books.html
@@ -2,9 +2,9 @@ $def with (books, booksearchkeys)
 <title>Buscar libros</title>
 <body>
 <a href="/" class="def">inicio</a>
-<a href="/bookadd" class="def">nuevo_libro</a>
-<a href="/bookimport" class="def">importar_libros</a>
-<a href="/bookexport" class="def">exportar_libros</a>
+<a href="/admin/bookadd" class="def">nuevo_libro</a>
+<a href="/admin/bookimport" class="def">importar_libros</a>
+<a href="/admin/bookexport" class="def">exportar_libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 
 <p><i><b>Buscar</b> y <b>editar</b> libros:</i></p>
