--- a/templates/studadd.html
+++ b/templates/studadd.html
@@ -1,7 +1,7 @@
 $def with (form)
 <title>Nuevo alumno</title>
 <body onload="javascript:document.student.nombre.focus()">
-<a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 <h2>Nuevo alumno:</h2>
 <form name="student" method="post"> 
