--- a/templates/studedit.html
+++ b/templates/studedit.html
@@ -1,7 +1,7 @@
 $def with (stud, grades, groups)
 <title>Editar alumno</title>
 <body>
-<a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2>Editar alumno:</h2>
