--- a/templates/useradd.html
+++ b/templates/useradd.html
@@ -1,7 +1,7 @@
 $def with (form)
 <title>Nuevo usuario</title>
 <body onload="javascript:document.main.username.focus()">
-<a href="/" class="def">inicio</a> <a href="/users" class="def">usuarios</a>
+<a href="/" class="def">inicio</a> <a href="/admin/users" class="def">usuarios</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 <h2>Nuevo usuario:</h2>
 <form name="main" method="post" id="main"> 
