--- a/templates/useredit.html
+++ b/templates/useredit.html
@@ -1,7 +1,7 @@
 $def with (user)
 <title>Editar usuario</title>
 <body>
-<a href="/" class = "def">inicio</a> <a href="/users" class = "def">usuarios</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/users" class = "def">usuarios</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2>Editar usuario:</h2>
