--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,20 +1,20 @@
 <title>Administración</title>
 <body>
 <a href="/" class="def">inicio</a>
-<a href="/grades" class="def">cursos</a>
-<a href="/groups" class="def">grupos</a>
-<a href="/students" class="def">alumnos</a>
-<a href="/books" class="def">libros</a>
-<a href="/tickets" class="def">tickets</a>
-<a href="/users" class="def">usuarios</a>
-<a href="/backup" class="def">backup</a>
+<a href="/admin/grades" class="def">cursos</a>
+<a href="/admin/groups" class="def">grupos</a>
+<a href="/admin/students" class="def">alumnos</a>
+<a href="/admin/books" class="def">libros</a>
+<a href="/admin/tickets" class="def">tickets</a>
+<a href="/admin/users" class="def">usuarios</a>
+<a href="/admin/backup" class="def">backup</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 
 <h2>Notas de ayuda</h2>
 
 <h3>Cursos y grupos</h3>
 
-<p>La aplicación necesita que la lista de <a href="/grades" class="def">cursos</a> y <a href="/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de las listas de <a href="/students" class="def">alumnos</a> y <a href="/books" class="def">libros</a>. Esto significa que hay que <strong>dar de alta</strong> todos los cursos y grupos que aparezcan en las tablas de alumnos y libros.</p>
+<p>La aplicación necesita que la lista de <a href="/admin/grades" class="def">cursos</a> y <a href="/admin/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de las listas de <a href="/admin/students" class="def">alumnos</a> y <a href="/admin/books" class="def">libros</a>. Esto significa que hay que <strong>dar de alta</strong> todos los cursos y grupos que aparezcan en las tablas de alumnos y libros.</p>
 
 <h3>Nombre de la organización y NIF para la nota de entrega</h3>
 
