--- a/templates/backup.html
+++ b/templates/backup.html
@@ -2,7 +2,7 @@
 <body>
 <a href="/" class = "def">inicio</a>
 
-<b><i>Addmin</i></b> (<a href="/logout" class = "def">logout</a>)
+<b><i>Admin</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2> Descargar una copia de la base de datos</h2>
 <a href="/libros.sqlite" class = "def">descargar base de datos</a>
