--- a/templates/bookadd.html
+++ b/templates/bookadd.html
@@ -1,7 +1,7 @@
 $def with (form)
 <body onload="javascript:document.book.titulo.focus()">
 <title>Nuevo libro</title>
-<a href="/" class = "def">inicio</a> <a href="/books" class = "def">libros</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/books" class = "def">libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 <h2>Nuevo libro:</h2>
 <form name="book" method="post"> 
