--- a/templates/bookimport.html
+++ b/templates/bookimport.html
@@ -1,5 +1,5 @@
 <title>Importar libros</title>
-<a href="/" class = "def">inicio</a> <a href="/books" class = "def">libros</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/books" class = "def">libros</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2> Importar tabla de libros</h2>
