--- a/templates/gradeadd.html
+++ b/templates/gradeadd.html
@@ -1,7 +1,7 @@
 $def with (form)
 <title>Nuevo curso</title>
 <body onload="javascript:document.main.curso.focus()">
-<a href="/" class="def">inicio</a> <a href="/grades" class="def">cursos</a>
+<a href="/" class="def">inicio</a> <a href="/admin/grades" class="def">cursos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 <h2>Nuevo curso:</h2>
 <form name="main" method="post" id="main"> 
