--- a/templates/grades.html
+++ b/templates/grades.html
@@ -2,7 +2,7 @@ $def with (grades)
 <title>Cursos</title>
 <body>
 <a href="/" class = "def">inicio</a>
-<a href="/gradeadd" class = "def">nuevo_curso</a>
+<a href="/admin/gradeadd" class = "def">nuevo_curso</a>
 <b><i>Admin!</i></b>(<a href="/logout" class = "def">logout</a>)
 <h2>Cursos registrados</h2>
 
