--- a/templates/groupadd.html
+++ b/templates/groupadd.html
@@ -1,7 +1,7 @@
 $def with (form)
 <title>Nuevo grupo</title>
 <body onload="javascript:document.main.grupo.focus()">
-<a href="/" class="def">inicio</a> <a href="/groups" class="def">grupos</a>
+<a href="/" class="def">inicio</a> <a href="/admin/groups" class="def">grupos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 <h2>Nuevo grupo:</h2>
 <form name="main" method="post" id="main"> 
