--- a/templates/groups.html
+++ b/templates/groups.html
@@ -2,7 +2,7 @@ $def with (groups)
 <title>Grupos</title>
 <body>
 <a href="/" class="def">inicio</a>
-<a href="/groupadd" class="def">nuevo_grupo</a>
+<a href="/admin/groupadd" class="def">nuevo_grupo</a>
 <b><i>Admin!</i></b>(<a href="/logout" class="def">logout</a>)
 <h2>Grupos registrados</h2>
 
