--- a/templates/students.html
+++ b/templates/students.html
@@ -2,9 +2,9 @@ $def with (studs, studsearchkeys)
 <title>Alumnos</title>
 <body>
 <a href="/" class="def">inicio</a>
-<a href="/studadd" class="def">nuevo_alumno</a>
-<a href="/studimport" class="def">importar_alumnos</a>
-<a href="/studexport" class="def">exportar_alumnos</a>
+<a href="/admin/studadd" class="def">nuevo_alumno</a>
+<a href="/admin/studimport" class="def">importar_alumnos</a>
+<a href="/admin/studexport" class="def">exportar_alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class="def">logout</a>)
 
 <p><i><b>Buscar</b> y <b>editar</b> alumnos:</i></p>
