--- a/templates/studimport.html
+++ b/templates/studimport.html
@@ -1,6 +1,6 @@
 <title>Importar alumnos</title>
 <body>
-<a href="/" class = "def">inicio</a> <a href="/students" class = "def">alumnos</a>
+<a href="/" class = "def">inicio</a> <a href="/admin/students" class = "def">alumnos</a>
 <b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2> Importar tabla de alumnos</h2>
