update grades and group tables when importing data

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,7 +14,9 @@
 
 <h3>Cursos y grupos</h3>
 
-<p>La aplicación necesita que la lista de <a href="/admin/grades" class="def">cursos</a> y <a href="/admin/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de las listas de <a href="/admin/students" class="def">alumnos</a> y <a href="/admin/books" class="def">libros</a>. Esto significa que hay que <strong>dar de alta</strong> todos los cursos y grupos que aparezcan en las tablas de alumnos y libros.</p>
+<p>La aplicación necesita que la lista de <a href="/admin/grades" class="def">cursos</a> y <a href="/admin/groups" class="def">grupos</a> sea <strong>consistente</strong> con los campos <code>curso</code> y <code>grupo</code> de los <a href="/admin/students" class="def">alumnos</a> y <a href="/admin/books" class="def">libros</a>.
+
+Cuando se importan alumnos o libros, se añaden los cursos y los grupos que no existen, pero no está demas revisarlo.
 
 <h3>Nombre de la organización y NIF para la nota de entrega</h3>
 
