--- a/templates/bookedit.html
+++ b/templates/bookedit.html
@@ -46,6 +46,10 @@ $for s in book:
         <td><input type="text" name="editorial_$s['id']" value="$s['editorial']" size="64"></input></td>
     </tr>
     <tr>
+        <td><b>isbn</b></td>
+        <td><input type="text" name="isbn_$s['id']" value="$s['isbn']" size="64"></input></td>
+    </tr>
+    <tr>
         <td><b>precio</b></td>
         <td><input type="text" name="precio_$s['id']" value="$s['precio']" size="12"></input></td>
     </tr>
