--- a/templates/books.html
+++ b/templates/books.html
@@ -19,6 +19,7 @@ $def with (books, booksearchkeys)
     <td><b>curso</b></td>
     <td><b>grupo</b></td>
     <td><b>editorial</b></td>
+    <td><b>isbn</b></td>
     <td><b>precio</b></td>
     <td><b>stock</b></td>
 </tr>
@@ -30,6 +31,7 @@ $for book in books:
         <td>$book.curso</td>
         <td>$book.grupo</td>
         <td>$book.editorial</td>
+        <td>$book.isbn</td>
         <td>$book.precio</td>
         <td>$book.stock</td>
     </tr>
