Edit student info as a step before cart Added "profesiones" field to the students table

--- a/templates/students.html
+++ b/templates/students.html
@@ -19,6 +19,7 @@ $def with (studs, studsearchkeys)
     <td><b>grupo</b></td>
     <td><b>nombre</b></td>
     <td><b>tutor</b></td>
+    <td><b>profesiones</b></td>
     <!-- td><b>socio</b></td>
     <td><b>hermano</b></td -->
     <td><b>tel1</b></td>
@@ -34,6 +35,7 @@ $for student in studs:
         <td>$student.grupo</td>
         <td>$student.nombre</td>
         <td>$student.tutor</td>
+        <td>$student.profesiones</td>
         <!-- td>$student.socio</td>
         <td>$student.hermano</td -->
         <td>$student.tel1</td>
