--- a/templates/studedit.html
+++ b/templates/studedit.html
@@ -1,8 +1,10 @@
-$def with (stud, grades, groups)
+$def with (stud, grades, groups, user)
 <title>Editar alumno</title>
 <body>
-<a href="/" class = "def">inicio</a> <a href="/admin/students" class = "def">alumnos</a>
-<b><i>Admin!</i></b> (<a href="/logout" class = "def">logout</a>)
+<a href="/" class = "def">inicio</a>
+$if user == "Administrador":
+    <a href="/admin/students" class = "def">alumnos</a>
+<b><i>$user</i></b> (<a href="/logout" class = "def">logout</a>)
 
 <h2>Editar alumno:</h2>
 
@@ -44,6 +46,10 @@ $for s in stud:
     <tr>
         <td><b>tutor</b></td>
         <td><input type="text" name="tutor_$s['id']" value="$s['tutor']" size="64"></input></td>
+    </tr>
+    <tr>
+        <td><b>profesiones</b></td>
+        <td><input type="text" name="profesiones_$s['id']" value="$s['profesiones']" size="64"></input></td>
     </tr>
     <tr>
         <td><b>tel1</b></td>
