--- a/templates/cart.html
+++ b/templates/cart.html
@@ -38,10 +38,10 @@ $for book in books:
         $else:
             <td>$book.precio EUR</td>
     </tr>
-<tr id="addmore">
+<!-- tr id="addmore">
     <td><input type="Checkbox" name="addmore"></input></td>
     <td>Mostrar todos</td>
-</tr>
+</tr -->
 </table>
 <input type="submit" />
 </form>
