--- a/stylesheets/libros.css
+++ b/stylesheets/libros.css
@@ -1,7 +1,9 @@
-h3 {color:gray;}
-p.error {color:red;}
-tr:nth-child(even) {background: #EEE}
-tr:nth-child(odd) {background: #FFF}
+h1 {color:gray; font-size: 1rem}
+h2 {color:gray; font-size: 1rem}
+h3 {color:gray; font-size: 1rem}
+p.error {color:red; ; font-size: 0.7rem}
+tr:nth-child(even) {background: #EEE; font-size: 0.8rem}
+tr:nth-child(odd) {background: #FFF; font-size: 0.8rem}
 td {font-size:smaller}
 a.def:link {color:#0000ff; text-decoration:none; padding: 2px 5px 2px 5px;}
 a.def:visited {color:#0000ff; text-decoration:none;}
